--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   auth_buttons: ^1.0.0
   http: ^0.13.1
-  
+  shared_preferences: ^2.0.5
+  image_picker: ^0.7.4
+  google_maps_flutter: ^2.0.4
+  geolocator: ^7.0.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -49,6 +53,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/config.json
+    - assets/thailand.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
