--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ flutter:
   assets:
     - assets/config.json
     - assets/thailand.json
+    - assets/image/background/backgroundFirst1.png
+    - assets/image/background/backgroundInfor.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
