--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,10 @@ dependencies:
   shared_preferences: ^2.0.5
   image_picker: ^0.7.4
   google_maps_flutter: ^2.0.4
-  geolocator: ^7.0.3
+  # geolocator: ^7.0.3
   material_floating_search_bar: ^0.3.4
   date_time_picker: ^2.0.0
+  location: ^4.3.0
 
 dev_dependencies:
   flutter_test:
