--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,8 @@ dependencies:
   flutter_background_service: ^0.1.5
   socket_io_client: ^1.0.1
   flutter_local_notifications: ^6.0.0
-
+  rxdart: ^0.26.0-nullsafety.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
