--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   socket_io_client: ^1.0.1
   flutter_local_notifications: ^6.0.0
   rxdart: ^0.26.0-nullsafety.1
+  curved_navigation_bar: ^1.0.1
   
 dev_dependencies:
   flutter_test:
