--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - assets/thailand.json
     - assets/image/background/backgroundFirst1.png
     - assets/image/background/backgroundInfor.png
+    - assets/image/picture/food.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
