--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   auth_buttons: ^1.0.0
   http: ^0.13.1
   shared_preferences: ^2.0.5
-  image_picker: ^0.7.4
+  image_picker: ^0.8.3+3 
   google_maps_flutter: ^2.0.4
   # geolocator: ^7.0.3
   material_floating_search_bar: ^0.3.4
@@ -43,6 +43,8 @@ dependencies:
   flutter_local_notifications: ^6.0.0
   rxdart: ^0.26.0-nullsafety.1
   curved_navigation_bar: ^1.0.1
+  provider: ^6.0.1
+
   
 dev_dependencies:
   flutter_test:
