--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - assets/image/picture/food.png
     - assets/image/background/bill.png
     - assets/image/background/bill2.png
+    - assets/image/markCalendar.png
 
   #   - images/a_dot_ham.jpeg
 
