--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,7 +71,7 @@ flutter:
     - assets/image/background/bill.png
     - assets/image/background/bill2.png
     - assets/image/markCalendar.png
-
+    - assets/image/background/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
